# WhistNeuralPolicy

./: .flake8  .gitignore  Pipfile  README.md  pyproject.toml
notebooks/: time_minmax.ipynb
src/whist/: game.py  minmax.py  minmax_multi.py
src/whist/models/: model.py
src/whist/scripts/: dataset.py
tests/: conftest.py  test_game.py  test_minmax.py
